# SRust-Marketplace

./: README.md
.github/workflows/: contracts.yml
.next/: app-build-manifest.json  build-manifest.json  trace
.next/cache/: .rscinfo  .tsbuildinfo
.next/cache/eslint/: .cache_1chxmb7
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
.next/server/app/: page.js  page.js.nft.json  page_client-reference-manifest.js
.next/server/chunks/: 402.js  622.js  69.js  778.js  871.js
.next/server/src/: middleware.js  middleware.js.map
.next/static/chunks/: 277-0e2bea38edafe8ba.js  845-89c9f47375394aad.js  main-6ff04bac51d3c626.js  webpack-37966e7904b9f0a3.js
.next/static/css/: 919d253f8ace4c80.css
.next/static/namPm0o3EY-Oi6ljZx2xZ/: _buildManifest.js
.next/types/app/: layout.ts  page.ts
apps/contracts/: .gitignore  README.md  TEST_DOCUMENTATION.md
apps/frontend/: .env.example  AUTHENTICATION_INTEGRATION.md  README.md  SUPABASE_AUTH_DOCUMENTATION.md  package-lock.json  package.json  simple-seed.js  tailwind.config.ts  test-auth.js
apps/frontend/supabase/: config.toml
contracts/: Cargo.toml
contracts/integrated-insurance-contract/contracts/integrated-insurance-contract/: Cargo.toml
contracts/integrated-insurance-contract/contracts/integrated-insurance-contract/src/: datatypes.rs  error.rs  insurance.rs  lib.rs  test.rs
src/: middleware.ts
src/app/types/: user.ts
src/lib/api/: cart.ts
src/lib/seeder/: database-seeder.ts
(+235 files in other folders)
